[workspace]
members = ["crates/api"]

resolver = "3"

[workspace.dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
futures = "0.3"
dotenv = "0.15"
once_cell = "1.8"
