[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
anyhow.workspace = true
once_cell.workspace = true
rand.workspace = true
futures.workspace = true
