[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
rand.workspace = true
futures.workspace = true
actix-rt.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
once_cell.workspace = true
dotenv.workspace = true
